// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`should change avatar shape when using avatar-shape prop 1`] = `"<nut-avatar class=\\"avatarClass avatarClass--square\\" shape=\\"square\\" style=\\"width: 50px; height: 50px;\\" bg-color=\\"rgb(239, 239, 239)\\"></nut-avatar>"`;

exports[`should change avatar size when using avatar-size prop: 20px 1`] = `"20px"`;

exports[`should change avatar size when using avatar-size prop: 20px 2`] = `"20px"`;

exports[`should render with row width array correctly 1`] = `
"<view class=\\"skeleton\\" rowwidth=\\"100%,30,5rem\\">
  <view class=\\"skeleton-animation\\"></view>
  <view class=\\"content\\">
    <!--v-if-->
    <!--v-if-->
    <view class=\\"content-line\\">
      <view class=\\"title\\"></view>
      <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
      <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
      <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
      <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
=======
exports[`should change avatar shape when using avatarShape prop 1`] = `
"<view style=\\"width: 50px; height: 50px; background-color: rgb(239, 239, 239);\\" class=\\"nut-avatar avatar-normal avatar-square avatarClass avatarClass--square\\"><i class=\\"nutui-iconfont nut-icon nut-icon- icon\\" src=\\"\\"></i>
  <!--v-if-->
</view>"
`;

exports[`should change avatar size when using avatarSize prop: 20px 1`] = `"20px"`;

exports[`should change avatar size when using avatarSize prop: 20px 2`] = `"20px"`;

exports[`should render default slot 1`] = `
"<view class=\\"skeleton\\">
  <!--v-if-->
  <view class=\\"content\\">
    <!--v-if-->
    <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
    <view class=\\"content-line\\">
      <view class=\\"title\\"></view>
      <view class=\\"blockClass\\" style=\\"width: 100px; height: 100px;\\"></view>
>>>>>>> master/next
    </view>
  </view>
</view>"
`;
